js/js.translator/testData/incremental/invalidation/interfaceWithDefaultParams/lib1/l1.8.kt
interface InterfaceA {
    fun functionA(x: Int, s: String = "xyz!", b: Boolean? = false, i: Int): Int
}
